# artefact

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  POSTGRESQL  README  README.md  TODO  artefact-lua.spec.in  artefact.spec.in  autogen.sh  configure.ac  libartefact.pc.in  libartefact.spec.in  oftdevproxy.spec.in
artefact/: .cvsignore  Makefile.am  artefact.cc  connectionpool.cc  connectionpool.h  datawriter.cc  datawriter.h  entryvalidator.cc  entryvalidator.h  environment.cc  environment.h  luadataclassifier.cc  luadataclassifier.h  luadatainterpreter.cc  luadatainterpreter.h  luaexpat.cc  luaexpat.h  luapostgresql.cc  luapostgresql.h  luatcpsocket.cc  luatcpsocket.h  postgresql.cc  postgresql.h  queryhandler.cc  queryhandler.h  server.cc  server.h  transactionlogger.cc  transactionlogger.h  translater_xml.cc  translater_xml.h  tree.h  xmlparser.cc  xmlparser.h
artefact/test/: Makefile.am  cleanup.psql  init.psql  system_test.sh  test.cc  test_mkdirr.cc  test_postgresql.cc  test_pseudoclass.cc
artefact/test/system_test/: artefact.conf.in
artefact/test/system_test/lua/: barcode.lua  lm600p.lua  tonoref2.lua  utils.lua
artefact/test/system_test/tests/: insertandquery.xml  insertlinses.xml  insertmany.xml  insertonelm600p.xml  lm600p.data  pretend.xml  queryall.xml  querymany.xml  queryonelm600p.xml  test1.test  test1_expected.xml  test2.test  test2_expected.xml  test3.test  test3_expected.xml  test4.test  test4_expected.xml  test5.test  test5_expected.xml  test6a.test  test6a_expected.xml  test6b.test  test6b_expected.xml  test7.test  test7_expected.xml
barcodeextract/: Makefile.am  compile.sh  inject.sh  main.cc  pgwork.cc  pgwork.h  run_inject.sh  run_inject_cron.sh
centos/etc/systemd/system/: artefact.service
design/: .cvsignore  Makefile  appendix-observationer.tex  arbejdsprocedurer.tex  brugbarhed.tex  design.tex  fejl.tex  fixme.dtx  fixme.ins  hyphenation.tex  konklusion.tex  netvaerk.tex  preamble.tex  protokoller.tex  rfid.fig  rfid.tex  software.fig  software.tex  udstyr.fig  udstyr.tex
design/rm_slides/: .cvsignore  Makefile  preamble.tex
doc/: .cvsignore  Makefile.am  doxygen.cfg.in
etc/: Makefile.am  artefact.conf.example.in  artefact.in  artefact.psql  client.conf  oftdevproxy.in
gentoo/init.d/: Makefile.am  artefact.in  feed.in  pidiod.in
gentoo/logrotate.d/: artefact  feed  pidiod
lib/: .cvsignore  Makefile.am  base64.cc  base64.h  config.cc  config.h  config.l  config.y  cpr.cc  cpr.h  cprutils.cc  cprutils.h  daemon.cc  delcom.cc  delcom.h  entry.cc  entry.h  exception.cc  exception.h  httpd.cc  httpd.h  iodevice.h  libartefactstatus.h  log.cc  log.h  lua.cc  lua.h  luautil.cc  luautil.h  md5.cc  md5.h  mkdirr.cc  mkdirr.h  mutex.cc  mutex.h  saxparser.cc  saxparser.h  semaphore.cc  semaphore.h  serial.cc  (+15 more)
libartefact/: Makefile.am  libartefact.cc  libartefact.h  libartefact_private.h  responsparser.cc  responsparser.h  resultparser.cc  resultparser.h
lua/: Makefile.am  ark700a.lua  barcode.lua  base64.lua  cpr.lua  cpr_pracroxml.lua  echo.lua  iolmaster500.lua  la350.lua  lensbarcode.lua  lensmeter.lua  lensmeter_ini.lua  lensmeter_pracroxml.lua  lensmeter_validator.lua  lensmeter_xml.lua  lm600p.lua  nt3000.lua  raw.lua  referral.lua  referral_pracroxml.lua  test.lua  test_lua.cc  tonoref2.lua  visutron900plus.lua
man/: Makefile.am
oftdevproxy/: .cvsignore  Makefile.am  artefact.cc  artefact.h  oftdevproxy.cc  replygenerator.cc  replygenerator.h  request.h  requestparser.cc  requestparser.h
tools/: Makefile.am  Makefile.am.lua.test  Makefile.am.test  artefact_inrep.sh  testlist  testlistlua  testlua
xml/: Makefile.am  sample.xml  schema.xsd
